# cargo-dlx

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1jv8nzhwqmj3zbxrq830ym3zaacjhgkv-source  1q1b5ksha7l0aixsk4hdn167ykbwyxb8-source
.github/workflows/: ci.yml  release-plz.yml
src/: cli.rs  main.rs  run.rs
src/ops/: mod.rs
src/ops/cargo_dlx/: cli.rs  mod.rs  run.rs
tests/testsuite/: dlx.rs  main.rs
tests/testsuite/cargo-dlx/errors/: mod.rs
tests/testsuite/cargo-dlx/help/: mod.rs
tests/testsuite/cargo-dlx/run/: mod.rs
tests/testsuite/cargo_dlx/: mod.rs
