[package]
name = "cargo-dlx"
version = "0.1.0"
description = "A cargo subcommand for running remote binaries"
edition = "2024"
authors = ["Embers-of-the-Fire <stellarishs@163.com>"]
repository = "https://github.com/Embers-of-the-Fire/cargo-dlx"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "install", "execute", "remote", "binary"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]

