[package]
name = "cargo-dlx"
version = "0.2.0"
description = "A cargo subcommand for running remote binaries"
edition = "2024"
authors = ["Embers-of-the-Fire <stellarishs@163.com>"]
repository = "https://github.com/Embers-of-the-Fire/cargo-dlx"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "install", "execute", "remote", "binary"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
cargo-subcommand-metadata = "0.1.0"
clap = { version = "4.5.60", features = ["derive"] }
clap-cargo = "0.18.3"
semver = "1.0.27"
url = "2.5.7"

[dev-dependencies]
cargo-test-macro = "0.4.9"
cargo-test-support = "0.10.0"
cargo-util = "0.2.27"
snapbox = "0.6.4"
